maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:10: error: not found: value printIn
    case _ => printIn("Scumbag")
              ^