maze.island.IslandMaze.scala.code
override def run() {
  
  var etat = 0
  
  etat match {
    
    case 0 => run2North(); etat = 1
    case 1 => keepHandOnSideWall(); etat = 0
    case _ => printIn("Scumbag")
    
  }
  
  prendBiscuit()
}


def keepHandOnSideWall() {
  
	gauche()
  
  if (estFaceMur()) {
    
    droite()
    
    if (!estFaceMur()) {
      
      avance()
      
    }
    
    else {
      
      droite()
      
    }
  }
    
	else {
    
    avance()
    
  }
    
}


def run2North() {
  
  setDirection(Direction.NORTH)
  
  while (!estFaceMur()) {
    
    avance()
    
  }
  
}